Updated swagger documentation again
